learn ui5 controller

--- a/ui5/sap.m.tutorial.walkthrough.04/webapp/index.html
+++ b/ui5/sap.m.tutorial.walkthrough.04/webapp/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>SAPUI5 Walkthrough</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 	<script
 		id="sap-ui-bootstrap"
-		type="text/application"
-		src="./resources/sap-ui-core.js"
-		data-sap-ui-theme="sap_fiori_3"
+		src="https://sdk.openui5.org/resources/sap-ui-core.js"
+		data-sap-ui-theme="sap_belize"
 		data-sap-ui-libs="sap.m"
 		data-sap-ui-compatVersion="edge"
 		data-sap-ui-async="true"
+		data-sap-ui-onInit="module:sap/ui/demo/walkthrough/index"
 		data-sap-ui-resourceroots='{
 			"sap.ui.demo.walkthrough": "./"
-		}'
-		data-sap-ui-oninit="module:sap/ui/demo/walkthrough/index">
+		}'>
+
 	</script>
 </head>
 <body class="sapUiBody" id="content">
+
 </body>
 </html>
+
+
